[gd_scene load_steps=12 format=3 uid="uid://bmvrjr0dlxx3"]

[ext_resource type="Theme" uid="uid://cyusk16m2fbev" path="res://ui_theme.tres" id="1_gyh3o"]
[ext_resource type="Script" path="res://game_over.gd" id="2_jnft4"]
[ext_resource type="AudioStream" uid="uid://dpp1mvcr5vqec" path="res://sounds/game_over_music/full_and_if_a_boat.mp3" id="3_4rk2i"]
[ext_resource type="AudioStream" uid="uid://cs6slp4sh7hgs" path="res://sounds/game_over_music/asunder.mp3" id="3_htcjs"]
[ext_resource type="AudioStream" uid="uid://r5rrc1pooa6m" path="res://sounds/game_over_music/music_zapsplat_missing_the_time_we_had.mp3" id="4_yor7e"]
[ext_resource type="AudioStream" uid="uid://dw0u3o82q74p1" path="res://sounds/game_over_music/oceans_at_rest.mp3" id="5_nt6qe"]
[ext_resource type="AudioStream" uid="uid://tcxqtcgn508s" path="res://sounds/game_over_music/sound_in_calling.mp3" id="6_0bsfe"]

[sub_resource type="Animation" id="Animation_js46j"]
resource_name = "GameOver"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.498039)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverMessage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.55),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ScoreMessage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayAgain:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Quit:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameOverMusic")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_whmcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.498039)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverMessage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ScoreMessage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayAgain:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Quit:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfkhh"]
_data = {
"GameOver": SubResource( "Animation_js46j" ),
"RESET": SubResource( "Animation_whmcx" )
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hn0pe"]
streams_count = 5
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource( "3_htcjs" )
stream_0/weight = 1.0
stream_1/stream = ExtResource( "3_4rk2i" )
stream_1/weight = 1.0
stream_2/stream = ExtResource( "4_yor7e" )
stream_2/weight = 1.0
stream_3/stream = ExtResource( "5_nt6qe" )
stream_3/weight = 1.0
stream_4/stream = ExtResource( "6_0bsfe" )
stream_4/weight = 2.0

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "1_gyh3o" )
script = ExtResource( "2_jnft4" )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="GameOverTitle" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -288.0
offset_right = 173.5
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="GameOverMessage" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 310.0
offset_top = -103.0
offset_right = -310.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Something bad happened
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ScoreMessage" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 310.0
offset_top = 115.0
offset_right = -310.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Your score: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="PlayAgain" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = 209.0
offset_right = 211.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Quit")
text = "Play Again"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Quit" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = 346.0
offset_right = 211.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../PlayAgain")
focus_neighbor_bottom = NodePath("../PlayAgain")
focus_next = NodePath("../PlayAgain")
focus_previous = NodePath("../PlayAgain")
text = "Quit
"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "AnimationLibrary_rfkhh" )
}

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = SubResource( "AudioStreamRandomizer_hn0pe" )
bus = &"Music"

[connection signal="draw" from="PlayAgain" to="." method="_on_play_again_draw"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
